# margent

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  Taskfile.yaml
include/margent/: MarginalsExposeBayesTree.h  subtree_search.h
src/: subtree_search.cpp
tests/: CMakeLists.txt  sphere2500.g2o.marginals  test_CLT.cpp  test_gbp_marg.cpp  test_marginal_compare.cpp  test_optimal_subtree.cpp
